Refactor hostname references in docker-compose and related scripts for consistency

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
   router1_host1:
     build: ./host
-    HOSTNAME: router1_host1
+    hostname: router1_host1
     cap_add:
     - NET_ADMIN
     networks:
@@ -10,7 +10,7 @@ services:
         ipv4_address: 192.168.1.2
   router1_host2:
     build: ./host
-    HOSTNAME: router1_host2
+    hostname: router1_host2
     cap_add:
     - NET_ADMIN
     networks:
@@ -18,9 +18,9 @@ services:
         ipv4_address: 192.168.2.2
   router1:
     build: ./router
-    HOSTNAME: router1
+    hostname: router1
     environment:
-      HOSTNAME: router1
+      hostname: router1
     volumes:
     - ./router/router.py:/app/router.py
     cap_add:
@@ -30,13 +30,15 @@ services:
         ipv4_address: 192.168.1.10
       router1_host2_net:
         ipv4_address: 192.168.2.10
-      router1_router3_net:
+      router1_router4_net:
         ipv4_address: 10.10.1.10
-      router1_router2_net:
+      router1_router3_net:
         ipv4_address: 10.10.2.10
+      router1_router2_net:
+        ipv4_address: 10.10.3.10
   router2_host1:
     build: ./host
-    HOSTNAME: router2_host1
+    hostname: router2_host1
     cap_add:
     - NET_ADMIN
     networks:
@@ -44,7 +46,7 @@ services:
         ipv4_address: 192.168.3.2
   router2_host2:
     build: ./host
-    HOSTNAME: router2_host2
+    hostname: router2_host2
     cap_add:
     - NET_ADMIN
     networks:
@@ -52,9 +54,9 @@ services:
         ipv4_address: 192.168.4.2
   router2:
     build: ./router
-    HOSTNAME: router2
+    hostname: router2
     environment:
-      HOSTNAME: router2
+      hostname: router2
     volumes:
     - ./router/router.py:/app/router.py
     cap_add:
@@ -65,12 +67,12 @@ services:
       router2_host2_net:
         ipv4_address: 192.168.4.10
       router1_router2_net:
-        ipv4_address: 10.10.2.2
-      router2_router4_net:
-        ipv4_address: 10.10.3.10
+        ipv4_address: 10.10.3.2
+      router2_router3_net:
+        ipv4_address: 10.10.4.10
   router3_host1:
     build: ./host
-    HOSTNAME: router3_host1
+    hostname: router3_host1
     cap_add:
     - NET_ADMIN
     networks:
@@ -78,7 +80,7 @@ services:
         ipv4_address: 192.168.5.2
   router3_host2:
     build: ./host
-    HOSTNAME: router3_host2
+    hostname: router3_host2
     cap_add:
     - NET_ADMIN
     networks:
@@ -86,9 +88,9 @@ services:
         ipv4_address: 192.168.6.2
   router3:
     build: ./router
-    HOSTNAME: router3
+    hostname: router3
     environment:
-      HOSTNAME: router3
+      hostname: router3
     volumes:
     - ./router/router.py:/app/router.py
     cap_add:
@@ -99,12 +101,12 @@ services:
       router3_host2_net:
         ipv4_address: 192.168.6.10
       router1_router3_net:
-        ipv4_address: 10.10.1.2
-      router3_router4_net:
-        ipv4_address: 10.10.4.10
+        ipv4_address: 10.10.2.2
+      router2_router3_net:
+        ipv4_address: 10.10.4.2
   router4_host1:
     build: ./host
-    HOSTNAME: router4_host1
+    hostname: router4_host1
     cap_add:
     - NET_ADMIN
     networks:
@@ -112,7 +114,7 @@ services:
         ipv4_address: 192.168.7.2
   router4_host2:
     build: ./host
-    HOSTNAME: router4_host2
+    hostname: router4_host2
     cap_add:
     - NET_ADMIN
     networks:
@@ -120,9 +122,9 @@ services:
         ipv4_address: 192.168.8.2
   router4:
     build: ./router
-    HOSTNAME: router4
+    hostname: router4
     environment:
-      HOSTNAME: router4
+      hostname: router4
     volumes:
     - ./router/router.py:/app/router.py
     cap_add:
@@ -132,10 +134,8 @@ services:
         ipv4_address: 192.168.7.10
       router4_host2_net:
         ipv4_address: 192.168.8.10
-      router2_router4_net:
-        ipv4_address: 10.10.3.2
-      router3_router4_net:
-        ipv4_address: 10.10.4.2
+      router1_router4_net:
+        ipv4_address: 10.10.1.2
 networks:
   router1_host1_net:
     driver: bridge
@@ -177,22 +177,22 @@ networks:
     ipam:
       config:
       - subnet: 192.168.8.0/24
-  router1_router3_net:
+  router1_router4_net:
     driver: bridge
     ipam:
       config:
       - subnet: 10.10.1.0/24
-  router1_router2_net:
+  router1_router3_net:
     driver: bridge
     ipam:
       config:
       - subnet: 10.10.2.0/24
-  router2_router4_net:
+  router1_router2_net:
     driver: bridge
     ipam:
       config:
       - subnet: 10.10.3.0/24
-  router3_router4_net:
+  router2_router3_net:
     driver: bridge
     ipam:
       config:
