--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+echo "Instalando dependências Python..."
 pip install networkx
 pip install matplotlib
-docker pull python:3.10-slim
 pip install psutil
 
+echo "Baixando imagem Docker Python 3.10..."
+docker pull python:3.10-slim
+
+echo "Subindo containers..."
 docker-compose up --build
